{
  "version": 4,
  "terraform_version": "1.12.2",
  "serial": 57,
  "lineage": "815a74db-5c26-7442-9984-1055c3fd51ff",
  "resources": [
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ca-central-1:819481465868:loadbalancer/app/acorn-base-dev-alb/fc8af58d60ed96ea",
            "arn_suffix": "app/acorn-base-dev-alb/fc8af58d60ed96ea",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "acorn-base-dev-alb-276025624.ca-central-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "health_check_logs": [
              {
                "enabled": false
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ca-central-1:819481465868:loadbalancer/app/acorn-base-dev-alb/fc8af58d60ed96ea",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "acorn-base-dev-alb",
            "preserve_host_header": false,
            "region": "ca-central-1",
            "security_groups": [
              "sg-0db9d938cc589636d"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0a83739e6acb97567"
              },
              {
                "subnet_id": "subnet-0fc45a6dc7eba0ca0"
              }
            ],
            "subnets": [
              "subnet-0a83739e6acb97567",
              "subnet-0fc45a6dc7eba0ca0"
            ],
            "tags": {
              "Name": "acorn-base-dev-alb"
            },
            "tags_all": {
              "Name": "acorn-base-dev-alb"
            },
            "vpc_id": "vpc-0ce56d98e54ad8d44",
            "xff_header_processing_mode": "append",
            "zone_id": "ZQSVJUPU6J1EY"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:ca-central-1:819481465868:loadbalancer/app/acorn-base-dev-alb/fc8af58d60ed96ea"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.alb.aws_security_group.alb",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ca-central-1:819481465868:listener/app/acorn-base-dev-alb/fc8af58d60ed96ea/e7f1fbfa3b76fbf9",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "jwt_validation": [],
                "order": 1,
                "redirect": [
                  {
                    "host": "#{host}",
                    "path": "/#{path}",
                    "port": "443",
                    "protocol": "HTTPS",
                    "query": "#{query}",
                    "status_code": "HTTP_301"
                  }
                ],
                "target_group_arn": "",
                "type": "redirect"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ca-central-1:819481465868:listener/app/acorn-base-dev-alb/fc8af58d60ed96ea/e7f1fbfa3b76fbf9",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ca-central-1:819481465868:loadbalancer/app/acorn-base-dev-alb/fc8af58d60ed96ea",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "region": "ca-central-1",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:ca-central-1:819481465868:listener/app/acorn-base-dev-alb/fc8af58d60ed96ea/e7f1fbfa3b76fbf9"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.alb.aws_lb.this",
            "module.alb.aws_security_group.alb",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ca-central-1:819481465868:listener/app/acorn-base-dev-alb/fc8af58d60ed96ea/76904ffa022bf8b4",
            "certificate_arn": "arn:aws:acm:ca-central-1:819481465868:certificate/1361a7d7-210a-413d-bc78-ca2dedbfdd09",
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "jwt_validation": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ca-central-1:819481465868:targetgroup/acorn-20251215192059499100000001/64a5ceff4efdf368",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ca-central-1:819481465868:listener/app/acorn-base-dev-alb/fc8af58d60ed96ea/76904ffa022bf8b4",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ca-central-1:819481465868:loadbalancer/app/acorn-base-dev-alb/fc8af58d60ed96ea",
            "mutual_authentication": [
              {
                "advertise_trust_store_ca_names": "",
                "ignore_client_certificate_expiry": false,
                "mode": "off",
                "trust_store_arn": ""
              }
            ],
            "port": 443,
            "protocol": "HTTPS",
            "region": "ca-central-1",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": "",
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": "",
            "routing_http_request_x_amzn_tls_version_header_name": "",
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "ELBSecurityPolicy-TLS13-1-2-2021-06",
            "tags": null,
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:ca-central-1:819481465868:listener/app/acorn-base-dev-alb/fc8af58d60ed96ea/76904ffa022bf8b4"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.acm.aws_acm_certificate.this",
            "module.acm.aws_acm_certificate_validation.this",
            "module.acm.aws_route53_record.validation",
            "module.acm.data.aws_route53_zone.public",
            "module.alb.aws_lb.this",
            "module.alb.aws_lb_target_group.this",
            "module.alb.aws_security_group.alb",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ca-central-1:819481465868:targetgroup/acorn-20251215192059499100000001/64a5ceff4efdf368",
            "arn_suffix": "targetgroup/acorn-20251215192059499100000001/64a5ceff4efdf368",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 15,
                "matcher": "200-399",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ca-central-1:819481465868:targetgroup/acorn-20251215192059499100000001/64a5ceff4efdf368",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:ca-central-1:819481465868:loadbalancer/app/acorn-base-dev-alb/fc8af58d60ed96ea"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "acorn-20251215192059499100000001",
            "name_prefix": "acorn-",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "region": "ca-central-1",
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "acorn-base-dev-tg"
            },
            "tags_all": {
              "Name": "acorn-base-dev-tg"
            },
            "target_control_port": 0,
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-0ce56d98e54ad8d44"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:ca-central-1:819481465868:targetgroup/acorn-20251215192059499100000001/64a5ceff4efdf368"
          },
          "dependencies": [
            "module.network.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:819481465868:security-group/sg-0db9d938cc589636d",
            "description": "ALB security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0db9d938cc589636d",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP (for base). Add HTTPS later with ACM.",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "acorn-base-dev-alb-sg",
            "name_prefix": "",
            "owner_id": "819481465868",
            "region": "ca-central-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "acorn-base-dev-alb-sg"
            },
            "tags_all": {
              "Name": "acorn-base-dev-alb-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ce56d98e54ad8d44"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "819481465868",
            "id": "sg-0db9d938cc589636d",
            "region": "ca-central-1"
          },
          "dependencies": [
            "module.network.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.ecs",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ecs",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:819481465868:security-group/sg-00507e6425c941a5b",
            "description": "ECS tasks security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-00507e6425c941a5b",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "From ALB only",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0db9d938cc589636d"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "acorn-base-dev-ecs-sg",
            "name_prefix": "",
            "owner_id": "819481465868",
            "region": "ca-central-1",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0ce56d98e54ad8d44"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "819481465868",
            "id": "sg-00507e6425c941a5b",
            "region": "ca-central-1"
          },
          "dependencies": [
            "module.alb.aws_security_group.alb",
            "module.network.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-023fe2ecf8d154d4b",
            "arn": "arn:aws:ec2:ca-central-1:819481465868:elastic-ip/eipalloc-023fe2ecf8d154d4b",
            "association_id": "eipassoc-0eebdda4d8ec46242",
            "domain": "vpc",
            "id": "eipalloc-023fe2ecf8d154d4b",
            "network_border_group": "ca-central-1",
            "network_interface": "eni-0370462d18f034e9a",
            "private_dns": "ip-10-20-0-117.ca-central-1.compute.internal",
            "private_ip": "10.20.0.117",
            "public_dns": "ec2-15-157-205-233.ca-central-1.compute.amazonaws.com",
            "public_ip": "15.157.205.233",
            "public_ipv4_pool": "amazon",
            "region": "ca-central-1",
            "tags": {
              "Name": "acorn-base-dev-nat-eip-0"
            },
            "tags_all": {
              "Name": "acorn-base-dev-nat-eip-0"
            }
          },
          "identity_schema_version": 0
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0fd82c498528b0ce4",
            "arn": "arn:aws:ec2:ca-central-1:819481465868:elastic-ip/eipalloc-0fd82c498528b0ce4",
            "association_id": "eipassoc-0b1dd53e712eda77b",
            "domain": "vpc",
            "id": "eipalloc-0fd82c498528b0ce4",
            "network_border_group": "ca-central-1",
            "network_interface": "eni-08a24356bba685f23",
            "private_dns": "ip-10-20-1-154.ca-central-1.compute.internal",
            "private_ip": "10.20.1.154",
            "public_dns": "ec2-15-156-46-141.ca-central-1.compute.amazonaws.com",
            "public_ip": "15.156.46.141",
            "public_ipv4_pool": "amazon",
            "region": "ca-central-1",
            "tags": {
              "Name": "acorn-base-dev-nat-eip-1"
            },
            "tags_all": {
              "Name": "acorn-base-dev-nat-eip-1"
            }
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:819481465868:internet-gateway/igw-0d8502f3e88d85e4f",
            "id": "igw-0d8502f3e88d85e4f",
            "owner_id": "819481465868",
            "region": "ca-central-1",
            "tags": {
              "Name": "acorn-base-dev-igw"
            },
            "tags_all": {
              "Name": "acorn-base-dev-igw"
            },
            "vpc_id": "vpc-0ce56d98e54ad8d44"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-023fe2ecf8d154d4b",
            "association_id": "eipassoc-0eebdda4d8ec46242",
            "availability_mode": "zonal",
            "connectivity_type": "public",
            "id": "nat-0e6c4923e1aa0f77f",
            "network_interface_id": "eni-0370462d18f034e9a",
            "private_ip": "10.20.0.117",
            "public_ip": "15.157.205.233",
            "region": "ca-central-1",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0fc45a6dc7eba0ca0",
            "tags": {
              "Name": "acorn-base-dev-nat-0"
            },
            "tags_all": {
              "Name": "acorn-base-dev-nat-0"
            },
            "vpc_id": "vpc-0ce56d98e54ad8d44"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.network.aws_eip.nat",
            "module.network.aws_internet_gateway.this",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0fd82c498528b0ce4",
            "association_id": "eipassoc-0b1dd53e712eda77b",
            "availability_mode": "zonal",
            "connectivity_type": "public",
            "id": "nat-088b599768743d74f",
            "network_interface_id": "eni-08a24356bba685f23",
            "private_ip": "10.20.1.154",
            "public_ip": "15.156.46.141",
            "region": "ca-central-1",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0a83739e6acb97567",
            "tags": {
              "Name": "acorn-base-dev-nat-1"
            },
            "tags_all": {
              "Name": "acorn-base-dev-nat-1"
            },
            "vpc_id": "vpc-0ce56d98e54ad8d44"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.network.aws_eip.nat",
            "module.network.aws_internet_gateway.this",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_0_0_0_0",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-09e9ca0696a67e5aa1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0e6c4923e1aa0f77f",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "region": "ca-central-1",
            "route_table_id": "rtb-09e9ca0696a67e5aa",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "819481465868",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": null,
            "region": "ca-central-1",
            "route_table_id": "rtb-09e9ca0696a67e5aa"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.network.aws_eip.nat",
            "module.network.aws_internet_gateway.this",
            "module.network.aws_nat_gateway.this",
            "module.network.aws_route_table.private",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-08206cb95a63289091080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-088b599768743d74f",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "region": "ca-central-1",
            "route_table_id": "rtb-08206cb95a6328909",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "819481465868",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": null,
            "region": "ca-central-1",
            "route_table_id": "rtb-08206cb95a6328909"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.network.aws_eip.nat",
            "module.network.aws_internet_gateway.this",
            "module.network.aws_nat_gateway.this",
            "module.network.aws_route_table.private",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_0_0_0_0",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0d8502f3e88d85e4f",
            "id": "r-rtb-04d569bf879a7692c1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "region": "ca-central-1",
            "route_table_id": "rtb-04d569bf879a7692c",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "819481465868",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": null,
            "region": "ca-central-1",
            "route_table_id": "rtb-04d569bf879a7692c"
          },
          "dependencies": [
            "module.network.aws_internet_gateway.this",
            "module.network.aws_route_table.public",
            "module.network.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:819481465868:route-table/rtb-09e9ca0696a67e5aa",
            "id": "rtb-09e9ca0696a67e5aa",
            "owner_id": "819481465868",
            "propagating_vgws": [],
            "region": "ca-central-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0e6c4923e1aa0f77f",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "acorn-base-dev-rt-private-0"
            },
            "tags_all": {
              "Name": "acorn-base-dev-rt-private-0"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ce56d98e54ad8d44"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "819481465868",
            "id": "rtb-09e9ca0696a67e5aa",
            "region": "ca-central-1"
          },
          "dependencies": [
            "module.network.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:819481465868:route-table/rtb-08206cb95a6328909",
            "id": "rtb-08206cb95a6328909",
            "owner_id": "819481465868",
            "propagating_vgws": [],
            "region": "ca-central-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-088b599768743d74f",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "acorn-base-dev-rt-private-1"
            },
            "tags_all": {
              "Name": "acorn-base-dev-rt-private-1"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ce56d98e54ad8d44"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "819481465868",
            "id": "rtb-08206cb95a6328909",
            "region": "ca-central-1"
          },
          "dependencies": [
            "module.network.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:819481465868:route-table/rtb-04d569bf879a7692c",
            "id": "rtb-04d569bf879a7692c",
            "owner_id": "819481465868",
            "propagating_vgws": [],
            "region": "ca-central-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0d8502f3e88d85e4f",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "acorn-base-dev-rt-public"
            },
            "tags_all": {
              "Name": "acorn-base-dev-rt-public"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ce56d98e54ad8d44"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "819481465868",
            "id": "rtb-04d569bf879a7692c",
            "region": "ca-central-1"
          },
          "dependencies": [
            "module.network.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01833ac9ec5779256",
            "region": "ca-central-1",
            "route_table_id": "rtb-09e9ca0696a67e5aa",
            "subnet_id": "subnet-040e16a237a1c9923"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.network.aws_route_table.private",
            "module.network.aws_subnet.private",
            "module.network.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e1ad3f99241201bb",
            "region": "ca-central-1",
            "route_table_id": "rtb-08206cb95a6328909",
            "subnet_id": "subnet-0cc02fefb29d80b28"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.network.aws_route_table.private",
            "module.network.aws_subnet.private",
            "module.network.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02969759fcac9ceb0",
            "region": "ca-central-1",
            "route_table_id": "rtb-04d569bf879a7692c",
            "subnet_id": "subnet-0fc45a6dc7eba0ca0"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.network.aws_route_table.public",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-033ec26065817fbe6",
            "region": "ca-central-1",
            "route_table_id": "rtb-04d569bf879a7692c",
            "subnet_id": "subnet-0a83739e6acb97567"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.network.aws_route_table.public",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:819481465868:subnet/subnet-040e16a237a1c9923",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ca-central-1a",
            "availability_zone_id": "cac1-az1",
            "cidr_block": "10.20.10.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-040e16a237a1c9923",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "819481465868",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ca-central-1",
            "tags": {
              "Name": "acorn-base-dev-private-0"
            },
            "tags_all": {
              "Name": "acorn-base-dev-private-0"
            },
            "vpc_id": "vpc-0ce56d98e54ad8d44"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "819481465868",
            "id": "subnet-040e16a237a1c9923",
            "region": "ca-central-1"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.network.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:819481465868:subnet/subnet-0cc02fefb29d80b28",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ca-central-1b",
            "availability_zone_id": "cac1-az2",
            "cidr_block": "10.20.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0cc02fefb29d80b28",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "819481465868",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ca-central-1",
            "tags": {
              "Name": "acorn-base-dev-private-1"
            },
            "tags_all": {
              "Name": "acorn-base-dev-private-1"
            },
            "vpc_id": "vpc-0ce56d98e54ad8d44"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "819481465868",
            "id": "subnet-0cc02fefb29d80b28",
            "region": "ca-central-1"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.network.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:819481465868:subnet/subnet-0fc45a6dc7eba0ca0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ca-central-1a",
            "availability_zone_id": "cac1-az1",
            "cidr_block": "10.20.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0fc45a6dc7eba0ca0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "819481465868",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ca-central-1",
            "tags": {
              "Name": "acorn-base-dev-public-0"
            },
            "tags_all": {
              "Name": "acorn-base-dev-public-0"
            },
            "vpc_id": "vpc-0ce56d98e54ad8d44"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "819481465868",
            "id": "subnet-0fc45a6dc7eba0ca0",
            "region": "ca-central-1"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.network.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:819481465868:subnet/subnet-0a83739e6acb97567",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ca-central-1b",
            "availability_zone_id": "cac1-az2",
            "cidr_block": "10.20.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a83739e6acb97567",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "819481465868",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ca-central-1",
            "tags": {
              "Name": "acorn-base-dev-public-1"
            },
            "tags_all": {
              "Name": "acorn-base-dev-public-1"
            },
            "vpc_id": "vpc-0ce56d98e54ad8d44"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "819481465868",
            "id": "subnet-0a83739e6acb97567",
            "region": "ca-central-1"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.network.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:819481465868:vpc/vpc-0ce56d98e54ad8d44",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.20.0.0/16",
            "default_network_acl_id": "acl-0b021c3aff52747c5",
            "default_route_table_id": "rtb-0af97dbe6279205f9",
            "default_security_group_id": "sg-06733be19222cca0e",
            "dhcp_options_id": "dopt-0d93cbf08a195d938",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0ce56d98e54ad8d44",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0af97dbe6279205f9",
            "owner_id": "819481465868",
            "region": "ca-central-1",
            "tags": {
              "Name": "acorn-base-dev"
            },
            "tags_all": {
              "Name": "acorn-base-dev"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "819481465868",
            "id": "vpc-0ce56d98e54ad8d44",
            "region": "ca-central-1"
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}